Add listener for tree root changes to apply changes to data node root. Also add generics to RequestHandler
Signed-off-by: Jakub Šmrha <kuba.smrha@gmail.com>